fixup: Simplify render, fix spinner z-index issues

--- a/app/src/components/Page/styles.css
+++ b/app/src/components/Page/styles.css
@@ -21,5 +21,5 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 3;
 }
